--- a/frontend/source/css/styles.scss
+++ b/frontend/source/css/styles.scss
@@ -340,7 +340,7 @@ header {
 
 }
 
-.confirm-ardunio-delete {
+.confirm-arduino-delete {
     position: absolute;
     background-color: white;
     width: 200px;
