--- a/frontend/source/css/styles.css
+++ b/frontend/source/css/styles.css
@@ -385,7 +385,7 @@ header .header-element__new-arduino-button:hover {
   }
 }
 
-.confirm-ardunio-delete {
+.confirm-arduino-delete {
   position: absolute;
   background-color: white;
   width: 200px;
@@ -395,7 +395,7 @@ header .header-element__new-arduino-button:hover {
   z-index: 999;
 }
 
-.confirm-ardunio-delete form {
+.confirm-arduino-delete form {
   width: 100%;
   height: 100%;
 }
