--- a/new frontend/source/styles/_components.scss
+++ b/new frontend/source/styles/_components.scss
@@ -3,12 +3,15 @@
 
 .background-hide {
     position: absolute;
+    top: 0;
+    left: 0;
     z-index: 100;
+    width: 100%;
+    height: 100%;
     background-color: #6B2BD160;
 }
 
 body {
-    color: white;
     background-color: #6B2BD1;
 }
 
@@ -21,70 +24,187 @@ body {
     .header__button {
         justify-self: flex-end;
         align-self: center;        
+        margin-right: 37px;
     }
 }
 
 .heading-1 {
+    color: white;
     font-size: $font-size-header1;
     font-family: "poppins semibold";
 }
 
+.status-info {
+    grid-column: 2;
+    grid-row: 1;
 
-.ardunio-overview-table {
-    height: 100%; //75.5%
-    width: 100%; //65.5%
+    background-color: white;
+    border-radius: 0.5rem;
+    height: 28px;
+
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    flex-flow: column;
+    vertical-align: middle;
+   
+
+    p {
+        font-size: 16px;
+        font-family: "poppins medium";
+    }
+}
+
+.status-info--error {
+    background-color: $color-red !important;
+    color: white !important;
+    font-size: 16px;
+    font-family: "poppins medium";
+}
+
+.status-info--animate {
+    .status-info__animation-section {
+        width: 100%;
+        height: 3px;
+        position: relative;
+        overflow: hidden;
+        background-color: $color-green;
+        border-radius: 20px;
+        
+        &:before {
+            content: "";
+            position: absolute;
+            left: -50%;
+            height: 3px;
+            width: 40%;
+            background-color: white;
+            animation: lineAnim 1s linear infinite;
+    
+        }
+    }
+}
+
+@keyframes lineAnim {
+    0% {
+        left: -40%;
+    }
+    50% {
+        left: 20%;
+        width: 80%;
+    }
+    100% {
+        left: 100%;
+        width: 100%;
+    }
+}
+
+.arduino-overview-table {
     background-color: $color-dark-gray;
     border-radius: 1rem;
     overflow: auto;
-    
+    box-shadow: 0px 3px 6px #00000016;    
+
     table {
         border-collapse: collapse;
         width: 100%;
 
         thead {
-            height: 3.81rem;
+            width: 100%;
+            height: 61px;
             background-color: white;
-
+            
             th {
-                width: auto;
-        
+                width: 163px;
+                text-align: left;
+
                 .button-table-head {
-                    //width: calc(100/6*1%);
+                    text-align: left;
                     border: none;
                     outline: none;
                     background: none;
-                    font-size: 1.375rem;
+                    font-size: $font-size-header2;
+                    font-family: "poppins semibold";
+                    color: $color-gray;
 
                     &:hover {
                         cursor: pointer;
+                        color: $color-dark-gray;
                     }
                 }
             }
-        }
-    }
 
-    .ardunio-overview-table__body {
+            th:first-child {
+                padding-left: 51px;
+            }
+
+            th:last-child {
+                text-align: right;
+                padding-right: 37px;
+            }
+        }
+
+        tbody {
+            .table-row {
+                height: 56px;
+
+                .table-data-general {
+                    font-size: $font-size-table-data;
+                    text-align: left;
+                    color: white;
+                    font-family: "poppins medium";
+                }
+
+                .table-data-general:first-child {
+                    padding-left: 51px;
+                }
+
+                .table-data-general:last-child {
+                    text-align: right;
+                    padding-right: 37px;
+                }
+
+                &:hover {
+                    background-color: #7DD68E20 !important;
+                    cursor: pointer;
+                }
+            }
+
+            .table-row:nth-child(odd) {
+                background-color: #FFFFFF15;
+            }    
+        }
+    }   
+
+    .arduino-overview-table__body {
     
-        .ardunio-overview-table__element {
+        .arduino-overview-table__element {
             color: white;
             font-size: $font-size-text;
         }
     }
 }
 
+.table-row--active {
+    background-color: #7DD68E54;
+}
+
 .button-general {
-    background-color: none;
+    background: none;
     outline: none;
     border: none;
     border-radius: 0.5rem;
 
     font-size: $font-size-button;
     font-family: "poppins medium";
-    letter-spacing: 0.2px;
 
-    height: 2rem;
+    letter-spacing: 0.064px;
+
+    height: 38px;
     width: 8rem;
     color: white;
+
+    
 
     &:hover {
         transition: all .1s;
@@ -100,9 +220,10 @@ body {
 
 .button-red {
     background-color: $color-red;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
-        border: 1px solid $color-red;
+        border: 2px solid $color-red;
         color: $color-red;
     }
 
@@ -114,6 +235,7 @@ body {
 
 .button-green {
     background-color: $color-green;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
         border: 2px solid $color-green;
@@ -129,6 +251,7 @@ body {
 .button-white {
     background-color: white;
     color: $color-dark-gray !important;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
         background-color: $color-dark-gray !important;
@@ -142,7 +265,9 @@ body {
 }
 
 .button-purple {
+    border: 2px solid $color-purple;
     background-color: $color-purple;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
         border: 2px solid $color-purple;
@@ -155,17 +280,18 @@ body {
     }
 }
 
-.button-table-head {
-    background-color: transparent !important;
-    color: $color-gray;
+.button-table {
+    width: 8rem;
+    background: none;
+    outline: none;
+    border: none;
+    text-align: center;
+    padding: 0.3rem;
+    font-size: 20px;
+    color: white; 
 
     &:hover {
-        color: $color-dark-gray;
-    }
-
-    &:active {
-        color: $color-gray;
-        background-color: $color-red;
+        cursor: pointer;
     }
 }
 
@@ -192,13 +318,14 @@ body {
 }
 
 .input-outline--green {
-    border: 0.125rem solid $color-red;
+    border: 0.125rem solid $color-green;
 }
 
 .menu-general {
     position: absolute;
-    width: 19%;
-    top: 20%;
+    z-index: 200;
+    width: 364px;
+    top: 245px;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -218,14 +345,38 @@ body {
     flex-wrap: nowrap;
 
     input, button {
-        margin: 0.5rem 0;
+        margin-bottom: 18px;
     }
 
     .menu-general-button-container {
-        width: 19.3125rem;
+        width: 309px;
         display: flex;
         flex-flow: row;
         justify-content: space-between;
+    }
+}
+
+.arduino-options-menu {
+    width: 236px;
+    padding: 10px2;
+}
+
+.arduino-delete-menu {
+
+}
+
+.button-red--grayed {
+    color: $color-dark-gray;
+    background-color: $color-gray;
+
+    &:hover {
+        color: $color-dark-gray;            
+        background-color: $color-gray;
+    }
+
+    &:active {
+        color: $color-dark-gray;
+        background-color: $color-gray;
     }
 }
 
@@ -233,17 +384,19 @@ body {
     background-color: $color-dark-gray;
     border-radius: 1rem;
     box-shadow: 0px 3px 6px #00000016;
-    width: 100%; //12.95%
+
+    padding-top: 24px;
+    padding-bottom: 24px;
+
     color: white;
 
     display: flex;
     align-items: center;
-    justify-content: center; 
     flex-flow: column;
-    flex-wrap: nowrap;
 
     .widget-info__value {
         font-family: "poppins semibold";
+        letter-spacing: 0.64px;
     }
 
     .widget-info__unit {
@@ -254,7 +407,38 @@ body {
     .widget-info__description {
         font-size: $font-size-header2;
         font-family: "poppins semibold";
+       
     }
+}
+
+.widget-gauge {
+
+    .widget-info__gauge {
+        transform: translateY(-3rem);    
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+
+        //margin-bottom: 18px;
+
+        font-size: 32px;
+        font-family: "poppins semibold";
+        letter-spacing: 0.64px;
+        /*
+        background: 
+        radial-gradient(closest-side, white 80%, transparent 0 99.9%, white 0),
+        conic-gradient(
+          rgb(23, 0, 128) 0% calc(99 * 1%),
+            white 0% 1%  
+        );*/
+        background-color: red;
+    }
+}
+
+.widget-humidity {
+    place-self: end center;
+    width: 234px;
+    height: 132px;
 }
 
 .widget-info__value--focus {
@@ -267,4 +451,19 @@ body {
 
 .widget-info__value--yellow {
     color: $color-yellow;
+}
+
+@keyframes update {
+    0% {
+        color: white
+    }
+    25% {
+        color: $color-green;
+    }
+    75% {
+        color: $color-green;
+    }
+    100% {
+        color: white;
+    }
 }
