Socket.io Integration

--- a/new frontend/source/styles/_variables.scss
+++ b/new frontend/source/styles/_variables.scss
@@ -1,7 +1,7 @@
 $font-size-text: 1rem;
-$font-size-button: 22px;
+$font-size-button: 1.375rem;
 $font-size-currentvalue: 2rem;
-$font-size-table-data: 18px;
+$font-size-table-data: 1.125rem;
 $font-size-header2: 1.375rem;
 $font-size-header1: 4rem;
 
