--- a/new frontend/source/styles/_components.scss
+++ b/new frontend/source/styles/_components.scss
@@ -1,5 +1,5 @@
-@import "_variables.scss";
-@import "_fonts.scss";
+@import "./_variables.scss";
+@import "./_fonts.scss";
 
 .background-hide {
     position: absolute;
@@ -24,7 +24,7 @@ body {
     .header__button {
         justify-self: flex-end;
         align-self: center;        
-        margin-right: 37px;
+        margin-right: 2.3125rem;
     }
 }
 
@@ -39,8 +39,8 @@ body {
     grid-row: 1;
 
     background-color: white;
-    border-radius: 0.5rem;
-    height: 28px;
+    border-radius: .5rem;
+    height: 1.75rem;
 
     overflow: hidden;
     display: flex;
@@ -51,7 +51,7 @@ body {
    
 
     p {
-        font-size: 16px;
+        font-size: 1rem;
         font-family: "poppins medium";
     }
 }
@@ -59,24 +59,24 @@ body {
 .status-info--error {
     background-color: $color-red !important;
     color: white !important;
-    font-size: 16px;
+    font-size: 1rem;
     font-family: "poppins medium";
 }
 
 .status-info--animate {
     .status-info__animation-section {
         width: 100%;
-        height: 3px;
+        height: .1875rem;
         position: relative;
         overflow: hidden;
         background-color: $color-green;
-        border-radius: 20px;
+        border-radius: 1.25rem;
         
         &:before {
             content: "";
             position: absolute;
             left: -50%;
-            height: 3px;
+            height: .1875rem;
             width: 40%;
             background-color: white;
             animation: lineAnim 1s linear infinite;
@@ -102,8 +102,8 @@ body {
 .arduino-overview-table {
     background-color: $color-dark-gray;
     border-radius: 1rem;
-    overflow: auto;
-    box-shadow: 0px 3px 6px #00000016;    
+    overflow: hidden;
+    box-shadow: 0rem .1875rem .375rem #00000016;    
 
     table {
         border-collapse: collapse;
@@ -111,11 +111,11 @@ body {
 
         thead {
             width: 100%;
-            height: 61px;
+            height: 3.8125rem;
             background-color: white;
             
             th {
-                width: 163px;
+                width: 10.1875rem;
                 text-align: left;
 
                 .button-table-head {
@@ -135,18 +135,18 @@ body {
             }
 
             th:first-child {
-                padding-left: 51px;
+                padding-left: 3.1875rem;
             }
 
             th:last-child {
                 text-align: right;
-                padding-right: 37px;
+                padding-right: 2.3125rem;
             }
         }
 
         tbody {
             .table-row {
-                height: 56px;
+                height: 3.5rem;
 
                 .table-data-general {
                     font-size: $font-size-table-data;
@@ -156,12 +156,12 @@ body {
                 }
 
                 .table-data-general:first-child {
-                    padding-left: 51px;
+                    padding-left: 3.1875rem;
                 }
 
                 .table-data-general:last-child {
                     text-align: right;
-                    padding-right: 37px;
+                    padding-right: 2.3125rem;
                 }
 
                 &:hover {
@@ -193,14 +193,14 @@ body {
     background: none;
     outline: none;
     border: none;
-    border-radius: 0.5rem;
+    border-radius: .5rem;
 
     font-size: $font-size-button;
     font-family: "poppins medium";
 
-    letter-spacing: 0.064px;
+    letter-spacing: .004rem;
 
-    height: 38px;
+    height: 2.375rem;
     width: 8rem;
     color: white;
 
@@ -220,10 +220,11 @@ body {
 
 .button-red {
     background-color: $color-red;
-    box-shadow: 0px 3px 6px #00000016;
+    box-shadow: 0rem .1875rem .375rem #00000016;
+    border: .125rem solid $color-red;
 
     &:hover {
-        border: 2px solid $color-red;
+        border: .125rem solid $color-red;
         color: $color-red;
     }
 
@@ -235,10 +236,10 @@ body {
 
 .button-green {
     background-color: $color-green;
-    box-shadow: 0px 3px 6px #00000016;
+    box-shadow: 0rem .1875rem .375rem #00000016;
 
     &:hover {
-        border: 2px solid $color-green;
+        border: .125rem solid $color-green;
         color: $color-green;
     }
 
@@ -251,7 +252,7 @@ body {
 .button-white {
     background-color: white;
     color: $color-dark-gray !important;
-    box-shadow: 0px 3px 6px #00000016;
+    box-shadow: 0rem .1875rem .375rem #00000016;
 
     &:hover {
         background-color: $color-dark-gray !important;
@@ -265,12 +266,12 @@ body {
 }
 
 .button-purple {
-    border: 2px solid $color-purple;
+    border: .125rem solid $color-purple;
     background-color: $color-purple;
-    box-shadow: 0px 3px 6px #00000016;
+    box-shadow: 0rem .1875rem .375rem #00000016;
 
     &:hover {
-        border: 2px solid $color-purple;
+        border: .125rem solid $color-purple;
         color: $color-purple;
     }
 
@@ -286,8 +287,8 @@ body {
     outline: none;
     border: none;
     text-align: center;
-    padding: 0.3rem;
-    font-size: 20px;
+    padding: .3rem;
+    font-size: 1.25rem;
     color: white; 
 
     &:hover {
@@ -301,9 +302,9 @@ body {
     height: 2rem;
 
     background-color: white;
-    border-radius: 0.5rem;
+    border-radius: .5rem;
 
-    padding: 0.5rem 1.375rem;
+    padding: .5rem 1.375rem;
 
     font-family: "poppins medium";
 
@@ -314,18 +315,18 @@ body {
 }
 
 .input-outline--red {
-    border: 0.125rem solid $color-red;
+    border: .125rem solid $color-red;
 }
 
 .input-outline--green {
-    border: 0.125rem solid $color-green;
+    border: .125rem solid $color-green;
 }
 
 .menu-general {
     position: absolute;
     z-index: 200;
-    width: 364px;
-    top: 245px;
+    width: 22.75rem;
+    top: 15.3125rem;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -333,7 +334,7 @@ body {
 
     border-radius: 1rem;
     background-color: $color-dark-gray;
-    box-shadow: 0px 3px 6px #00000016;
+    box-shadow: 0rem .1875rem .375rem #00000016;
 }
 
 .menu-general-form {
@@ -345,11 +346,11 @@ body {
     flex-wrap: nowrap;
 
     input, button {
-        margin-bottom: 18px;
+        margin-bottom: 1.125rem;
     }
 
     .menu-general-button-container {
-        width: 309px;
+        width: 19.3125rem;
         display: flex;
         flex-flow: row;
         justify-content: space-between;
@@ -357,8 +358,8 @@ body {
 }
 
 .arduino-options-menu {
-    width: 236px;
-    padding: 10px2;
+    width: 14.75rem;
+    padding: .625rem2;
 }
 
 .arduino-delete-menu {
@@ -383,10 +384,10 @@ body {
 .widget-info {
     background-color: $color-dark-gray;
     border-radius: 1rem;
-    box-shadow: 0px 3px 6px #00000016;
+    box-shadow: 0rem .1875rem .375rem #00000016;
 
-    padding-top: 24px;
-    padding-bottom: 24px;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 
     color: white;
 
@@ -396,11 +397,11 @@ body {
 
     .widget-info__value {
         font-family: "poppins semibold";
-        letter-spacing: 0.64px;
+        letter-spacing: .04rem;
     }
 
     .widget-info__unit {
-        font-size: 1.142rem;
+        font-size: 18.272px;
         font-family: "poppins semibold";
     }
 
@@ -414,16 +415,16 @@ body {
 .widget-gauge {
 
     .widget-info__gauge {
-        transform: translateY(-3rem);    
-        height: 40px;
-        width: 40px;
+        transform: translateY(-48px);    
+        height: 2.5rem;
+        width: 2.5rem;
         border-radius: 50%;
 
-        //margin-bottom: 18px;
+        //margin-bottom: 1.125rem;
 
-        font-size: 32px;
+        font-size: 2rem;
         font-family: "poppins semibold";
-        letter-spacing: 0.64px;
+        letter-spacing: .04rem;
         /*
         background: 
         radial-gradient(closest-side, white 80%, transparent 0 99.9%, white 0),
@@ -437,8 +438,8 @@ body {
 
 .widget-humidity {
     place-self: end center;
-    width: 234px;
-    height: 132px;
+    width: 14.625rem;
+    height: 8.25rem;
 }
 
 .widget-info__value--focus {
@@ -453,15 +454,22 @@ body {
     color: $color-yellow;
 }
 
+.data-update {
+    animation: update 3s ease-in 1;
+}
+
 @keyframes update {
     0% {
-        color: white
+        opacity: 0%;
+        color: $color-green;
     }
     25% {
+        opacity: 75%;
         color: $color-green;
     }
     75% {
-        color: $color-green;
+        opacity: 100%;
+        color: white;
     }
     100% {
         color: white;
