--- a/new frontend/source/styles/_components.scss
+++ b/new frontend/source/styles/_components.scss
@@ -1,5 +1,5 @@
-@import "./_variables.scss";
-@import "./_fonts.scss";
+@import "_variables.scss";
+@import "_fonts.scss";
 
 .background-hide {
     position: absolute;
@@ -24,7 +24,7 @@ body {
     .header__button {
         justify-self: flex-end;
         align-self: center;        
-        margin-right: 2.3125rem;
+        margin-right: 37px;
     }
 }
 
@@ -39,8 +39,8 @@ body {
     grid-row: 1;
 
     background-color: white;
-    border-radius: .5rem;
-    height: 1.75rem;
+    border-radius: 0.5rem;
+    height: 28px;
 
     overflow: hidden;
     display: flex;
@@ -51,59 +51,52 @@ body {
    
 
     p {
-        font-size: 1rem;
+        font-size: 16px;
         font-family: "poppins medium";
     }
-}
 
-.status-info--error {
-    background-color: $color-red !important;
-    color: white !important;
-    font-size: 1rem;
-    font-family: "poppins medium";
-}
-
-.status-info--animate {
-    .status-info__animation-section {
+    .status-info__animation {
         width: 100%;
-        height: .1875rem;
+        height: 3px;
         position: relative;
         overflow: hidden;
         background-color: $color-green;
-        border-radius: 1.25rem;
+        border-radius: 20px;
         
         &:before {
             content: "";
             position: absolute;
             left: -50%;
-            height: .1875rem;
+            height: 3px;
             width: 40%;
             background-color: white;
             animation: lineAnim 1s linear infinite;
-    
+
+        }
+    }
+
+
+    @keyframes lineAnim {
+        0% {
+            left: -40%;
+        }
+        50% {
+            left: 20%;
+            width: 80%;
+        }
+        100% {
+            left: 100%;
+            width: 100%;
         }
     }
 }
 
-@keyframes lineAnim {
-    0% {
-        left: -40%;
-    }
-    50% {
-        left: 20%;
-        width: 80%;
-    }
-    100% {
-        left: 100%;
-        width: 100%;
-    }
-}
 
 .arduino-overview-table {
     background-color: $color-dark-gray;
     border-radius: 1rem;
-    overflow: hidden;
-    box-shadow: 0rem .1875rem .375rem #00000016;    
+    overflow: auto;
+    box-shadow: 0px 3px 6px #00000016;    
 
     table {
         border-collapse: collapse;
@@ -111,11 +104,11 @@ body {
 
         thead {
             width: 100%;
-            height: 3.8125rem;
+            height: 61px;
             background-color: white;
             
             th {
-                width: 10.1875rem;
+                width: 163px;
                 text-align: left;
 
                 .button-table-head {
@@ -135,18 +128,18 @@ body {
             }
 
             th:first-child {
-                padding-left: 3.1875rem;
+                padding-left: 51px;
             }
 
             th:last-child {
                 text-align: right;
-                padding-right: 2.3125rem;
+                padding-right: 37px;
             }
         }
 
         tbody {
             .table-row {
-                height: 3.5rem;
+                height: 56px;
 
                 .table-data-general {
                     font-size: $font-size-table-data;
@@ -156,12 +149,12 @@ body {
                 }
 
                 .table-data-general:first-child {
-                    padding-left: 3.1875rem;
+                    padding-left: 51px;
                 }
 
                 .table-data-general:last-child {
                     text-align: right;
-                    padding-right: 2.3125rem;
+                    padding-right: 37px;
                 }
 
                 &:hover {
@@ -193,14 +186,14 @@ body {
     background: none;
     outline: none;
     border: none;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 
     font-size: $font-size-button;
     font-family: "poppins medium";
 
-    letter-spacing: .004rem;
+    letter-spacing: 0.064px;
 
-    height: 2.375rem;
+    height: 38px;
     width: 8rem;
     color: white;
 
@@ -220,11 +213,10 @@ body {
 
 .button-red {
     background-color: $color-red;
-    box-shadow: 0rem .1875rem .375rem #00000016;
-    border: .125rem solid $color-red;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
-        border: .125rem solid $color-red;
+        border: 2px solid $color-red;
         color: $color-red;
     }
 
@@ -236,10 +228,10 @@ body {
 
 .button-green {
     background-color: $color-green;
-    box-shadow: 0rem .1875rem .375rem #00000016;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
-        border: .125rem solid $color-green;
+        border: 2px solid $color-green;
         color: $color-green;
     }
 
@@ -252,7 +244,7 @@ body {
 .button-white {
     background-color: white;
     color: $color-dark-gray !important;
-    box-shadow: 0rem .1875rem .375rem #00000016;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
         background-color: $color-dark-gray !important;
@@ -266,12 +258,12 @@ body {
 }
 
 .button-purple {
-    border: .125rem solid $color-purple;
+    border: 2px solid $color-purple;
     background-color: $color-purple;
-    box-shadow: 0rem .1875rem .375rem #00000016;
+    box-shadow: 0px 3px 6px #00000016;
 
     &:hover {
-        border: .125rem solid $color-purple;
+        border: 2px solid $color-purple;
         color: $color-purple;
     }
 
@@ -287,8 +279,8 @@ body {
     outline: none;
     border: none;
     text-align: center;
-    padding: .3rem;
-    font-size: 1.25rem;
+    padding: 0.3rem;
+    font-size: 20px;
     color: white; 
 
     &:hover {
@@ -302,9 +294,9 @@ body {
     height: 2rem;
 
     background-color: white;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 
-    padding: .5rem 1.375rem;
+    padding: 0.5rem 1.375rem;
 
     font-family: "poppins medium";
 
@@ -315,18 +307,18 @@ body {
 }
 
 .input-outline--red {
-    border: .125rem solid $color-red;
+    border: 0.125rem solid $color-red;
 }
 
 .input-outline--green {
-    border: .125rem solid $color-green;
+    border: 0.125rem solid $color-red;
 }
 
 .menu-general {
     position: absolute;
     z-index: 200;
-    width: 22.75rem;
-    top: 15.3125rem;
+    width: 364px;
+    top: 245px;
     left: 0;
     right: 0;
     margin-left: auto;
@@ -334,7 +326,7 @@ body {
 
     border-radius: 1rem;
     background-color: $color-dark-gray;
-    box-shadow: 0rem .1875rem .375rem #00000016;
+    box-shadow: 0px 3px 6px #00000016;
 }
 
 .menu-general-form {
@@ -346,11 +338,11 @@ body {
     flex-wrap: nowrap;
 
     input, button {
-        margin-bottom: 1.125rem;
+        margin-bottom: 18px;
     }
 
     .menu-general-button-container {
-        width: 19.3125rem;
+        width: 309px;
         display: flex;
         flex-flow: row;
         justify-content: space-between;
@@ -358,36 +350,18 @@ body {
 }
 
 .arduino-options-menu {
-    width: 14.75rem;
-    padding: .625rem2;
+    width: 236px;
+    padding: 10px2;
 }
 
-.arduino-delete-menu {
-
-}
-
-.button-red--grayed {
-    color: $color-dark-gray;
-    background-color: $color-gray;
-
-    &:hover {
-        color: $color-dark-gray;            
-        background-color: $color-gray;
-    }
-
-    &:active {
-        color: $color-dark-gray;
-        background-color: $color-gray;
-    }
-}
 
 .widget-info {
     background-color: $color-dark-gray;
     border-radius: 1rem;
-    box-shadow: 0rem .1875rem .375rem #00000016;
+    box-shadow: 0px 3px 6px #00000016;
 
-    padding-top: 1.5rem;
-    padding-bottom: 1.5rem;
+    padding-top: 24px;
+    padding-bottom: 24px;
 
     color: white;
 
@@ -397,11 +371,11 @@ body {
 
     .widget-info__value {
         font-family: "poppins semibold";
-        letter-spacing: .04rem;
+        letter-spacing: 0.64px;
     }
 
     .widget-info__unit {
-        font-size: 18.272px;
+        font-size: 1.142rem;
         font-family: "poppins semibold";
     }
 
@@ -415,16 +389,16 @@ body {
 .widget-gauge {
 
     .widget-info__gauge {
-        transform: translateY(-48px);    
-        height: 2.5rem;
-        width: 2.5rem;
+        transform: translateY(-3rem);    
+        height: 40px;
+        width: 40px;
         border-radius: 50%;
 
-        //margin-bottom: 1.125rem;
+        //margin-bottom: 18px;
 
-        font-size: 2rem;
+        font-size: 32px;
         font-family: "poppins semibold";
-        letter-spacing: .04rem;
+        letter-spacing: 0.64px;
         /*
         background: 
         radial-gradient(closest-side, white 80%, transparent 0 99.9%, white 0),
@@ -438,8 +412,8 @@ body {
 
 .widget-humidity {
     place-self: end center;
-    width: 14.625rem;
-    height: 8.25rem;
+    width: 234px;
+    height: 132px;
 }
 
 .widget-info__value--focus {
@@ -454,22 +428,15 @@ body {
     color: $color-yellow;
 }
 
-.data-update {
-    animation: update 3s ease-in 1;
-}
-
 @keyframes update {
     0% {
-        opacity: 0%;
-        color: $color-green;
+        color: white
     }
     25% {
-        opacity: 75%;
         color: $color-green;
     }
     75% {
-        opacity: 100%;
-        color: white;
+        color: $color-green;
     }
     100% {
         color: white;
