--- a/new frontend/source/styles/index.css
+++ b/new frontend/source/styles/index.css
@@ -43,7 +43,7 @@ body {
   -ms-flex-item-align: center;
       -ms-grid-row-align: center;
       align-self: center;
-  margin-right: 2.3125rem;
+  margin-right: 37px;
 }
 
 .heading-1 {
@@ -58,8 +58,8 @@ body {
   -ms-grid-row: 1;
   grid-row: 1;
   background-color: white;
-  border-radius: .5rem;
-  height: 1.75rem;
+  border-radius: 0.5rem;
+  height: 28px;
   overflow: hidden;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -76,31 +76,24 @@ body {
 }
 
 .status-info p {
-  font-size: 1rem;
+  font-size: 16px;
   font-family: "poppins medium";
 }
 
-.status-info--error {
-  background-color: #FF6A6A !important;
-  color: white !important;
-  font-size: 1rem;
-  font-family: "poppins medium";
-}
-
-.status-info--animate .status-info__animation-section {
+.status-info .status-info__animation {
   width: 100%;
-  height: .1875rem;
+  height: 3px;
   position: relative;
   overflow: hidden;
   background-color: #7DD68E;
-  border-radius: 1.25rem;
+  border-radius: 20px;
 }
 
-.status-info--animate .status-info__animation-section:before {
+.status-info .status-info__animation:before {
   content: "";
   position: absolute;
   left: -50%;
-  height: .1875rem;
+  height: 3px;
   width: 40%;
   background-color: white;
   -webkit-animation: lineAnim 1s linear infinite;
@@ -138,9 +131,9 @@ body {
 .arduino-overview-table {
   background-color: #3B415A;
   border-radius: 1rem;
-  overflow: hidden;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
+  overflow: auto;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
 }
 
 .arduino-overview-table table {
@@ -150,12 +143,12 @@ body {
 
 .arduino-overview-table table thead {
   width: 100%;
-  height: 3.8125rem;
+  height: 61px;
   background-color: white;
 }
 
 .arduino-overview-table table thead th {
-  width: 10.1875rem;
+  width: 163px;
   text-align: left;
 }
 
@@ -175,32 +168,32 @@ body {
 }
 
 .arduino-overview-table table thead th:first-child {
-  padding-left: 3.1875rem;
+  padding-left: 51px;
 }
 
 .arduino-overview-table table thead th:last-child {
   text-align: right;
-  padding-right: 2.3125rem;
+  padding-right: 37px;
 }
 
 .arduino-overview-table table tbody .table-row {
-  height: 3.5rem;
+  height: 56px;
 }
 
 .arduino-overview-table table tbody .table-row .table-data-general {
-  font-size: 1.125rem;
+  font-size: 18px;
   text-align: left;
   color: white;
   font-family: "poppins medium";
 }
 
 .arduino-overview-table table tbody .table-row .table-data-general:first-child {
-  padding-left: 3.1875rem;
+  padding-left: 51px;
 }
 
 .arduino-overview-table table tbody .table-row .table-data-general:last-child {
   text-align: right;
-  padding-right: 2.3125rem;
+  padding-right: 37px;
 }
 
 .arduino-overview-table table tbody .table-row:hover {
@@ -225,11 +218,11 @@ body {
   background: none;
   outline: none;
   border: none;
-  border-radius: .5rem;
-  font-size: 1.375rem;
+  border-radius: 0.5rem;
+  font-size: 22px;
   font-family: "poppins medium";
-  letter-spacing: .004rem;
-  height: 2.375rem;
+  letter-spacing: 0.064px;
+  height: 38px;
   width: 8rem;
   color: white;
 }
@@ -247,13 +240,12 @@ body {
 
 .button-red {
   background-color: #FF6A6A;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
-  border: 0.125rem solid #FF6A6A;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
 }
 
 .button-red:hover {
-  border: 0.125rem solid #FF6A6A;
+  border: 2px solid #FF6A6A;
   color: #FF6A6A;
 }
 
@@ -264,12 +256,12 @@ body {
 
 .button-green {
   background-color: #7DD68E;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
 }
 
 .button-green:hover {
-  border: 0.125rem solid #7DD68E;
+  border: 2px solid #7DD68E;
   color: #7DD68E;
 }
 
@@ -281,8 +273,8 @@ body {
 .button-white {
   background-color: white;
   color: #3B415A !important;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
 }
 
 .button-white:hover {
@@ -296,14 +288,14 @@ body {
 }
 
 .button-purple {
-  border: 0.125rem solid #6B2BD1;
+  border: 2px solid #6B2BD1;
   background-color: #6B2BD1;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
 }
 
 .button-purple:hover {
-  border: 0.125rem solid #6B2BD1;
+  border: 2px solid #6B2BD1;
   color: #6B2BD1;
 }
 
@@ -318,8 +310,8 @@ body {
   outline: none;
   border: none;
   text-align: center;
-  padding: .3rem;
-  font-size: 1.25rem;
+  padding: 0.3rem;
+  font-size: 20px;
   color: white;
 }
 
@@ -332,8 +324,8 @@ body {
   width: 19.3125rem;
   height: 2rem;
   background-color: white;
-  border-radius: .5rem;
-  padding: .5rem 1.375rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem 1.375rem;
   font-family: "poppins medium";
 }
 
@@ -362,22 +354,22 @@ body {
 }
 
 .input-outline--green {
-  border: 0.125rem solid #7DD68E;
+  border: 0.125rem solid #FF6A6A;
 }
 
 .menu-general {
   position: absolute;
   z-index: 200;
-  width: 22.75rem;
-  top: 15.3125rem;
+  width: 364px;
+  top: 245px;
   left: 0;
   right: 0;
   margin-left: auto;
   margin-right: auto;
   border-radius: 1rem;
   background-color: #3B415A;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
 }
 
 .menu-general-form {
@@ -397,11 +389,11 @@ body {
 }
 
 .menu-general-form input, .menu-general-form button {
-  margin-bottom: 1.125rem;
+  margin-bottom: 18px;
 }
 
 .menu-general-form .menu-general-button-container {
-  width: 19.3125rem;
+  width: 309px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -415,32 +407,17 @@ body {
 }
 
 .arduino-options-menu {
-  width: 14.75rem;
-  padding: .625rem2;
-}
-
-.button-red--grayed {
-  color: #3B415A;
-  background-color: #707070;
-}
-
-.button-red--grayed:hover {
-  color: #3B415A;
-  background-color: #707070;
-}
-
-.button-red--grayed:active {
-  color: #3B415A;
-  background-color: #707070;
+  width: 236px;
+  padding: 10px2;
 }
 
 .widget-info {
   background-color: #3B415A;
   border-radius: 1rem;
-  -webkit-box-shadow: 0rem .1875rem .375rem #00000016;
-          box-shadow: 0rem .1875rem .375rem #00000016;
-  padding-top: 1.5rem;
-  padding-bottom: 1.5rem;
+  -webkit-box-shadow: 0px 3px 6px #00000016;
+          box-shadow: 0px 3px 6px #00000016;
+  padding-top: 24px;
+  padding-bottom: 24px;
   color: white;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -456,11 +433,11 @@ body {
 
 .widget-info .widget-info__value {
   font-family: "poppins semibold";
-  letter-spacing: .04rem;
+  letter-spacing: 0.64px;
 }
 
 .widget-info .widget-info__unit {
-  font-size: 18.272px;
+  font-size: 1.142rem;
   font-family: "poppins semibold";
 }
 
@@ -470,14 +447,14 @@ body {
 }
 
 .widget-gauge .widget-info__gauge {
-  -webkit-transform: translateY(-48px);
-          transform: translateY(-48px);
-  height: 2.5rem;
-  width: 2.5rem;
+  -webkit-transform: translateY(-3rem);
+          transform: translateY(-3rem);
+  height: 40px;
+  width: 40px;
   border-radius: 50%;
-  font-size: 2rem;
+  font-size: 32px;
   font-family: "poppins semibold";
-  letter-spacing: .04rem;
+  letter-spacing: 0.64px;
   /*
         background: 
         radial-gradient(closest-side, white 80%, transparent 0 99.9%, white 0),
@@ -490,8 +467,8 @@ body {
 
 .widget-humidity {
   place-self: end center;
-  width: 14.625rem;
-  height: 8.25rem;
+  width: 234px;
+  height: 132px;
 }
 
 .widget-info__value--focus {
@@ -506,23 +483,15 @@ body {
   color: #FFD76A;
 }
 
-.data-update {
-  -webkit-animation: update 3s ease-in 1;
-          animation: update 3s ease-in 1;
-}
-
 @-webkit-keyframes update {
   0% {
-    opacity: 0%;
-    color: #7DD68E;
+    color: white;
   }
   25% {
-    opacity: 75%;
     color: #7DD68E;
   }
   75% {
-    opacity: 100%;
-    color: white;
+    color: #7DD68E;
   }
   100% {
     color: white;
@@ -531,16 +500,13 @@ body {
 
 @keyframes update {
   0% {
-    opacity: 0%;
-    color: #7DD68E;
+    color: white;
   }
   25% {
-    opacity: 75%;
     color: #7DD68E;
   }
   75% {
-    opacity: 100%;
-    color: white;
+    color: #7DD68E;
   }
   100% {
     color: white;
